Code changed to log gc pause time CMS GC and ParOld GC added for experiment